--- a/style/main.scss
+++ b/style/main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Oswald:wght@500;700&display=swap');
 
 $gradientColor: linear-gradient(to bottom right, #38c9c9, #1CA7EC);
 $darkGreyColor: #1f1f1f;
@@ -7,11 +7,7 @@ $darkGreyColor: #1f1f1f;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Source Sans Pro', sans-serif;
-}
-
-body{
-    color: $darkGreyColor;
+    font-family: 'Open Sans', sans-serif;
 }
 
 ul{
@@ -22,208 +18,217 @@ a{
     text-decoration: none;
     color: $darkGreyColor;
     font-weight: 600;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
-h1{
-    font-family: 'Oswald', sans-serif;
-    font-weight: 700;
-    font-size: 4rem;
-    line-height: 120%;
-    margin: 1em 20vw 1em 6vw;
-    clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0 100%);
+.wrapper{
+    display: grid;
+    max-width: 110em;
+    margin: auto;
+}
+
+
+.hero{
     position: relative;
-    &::before{
+    .custom-shape-divider-bottom-1651637066 {
         position: absolute;
-        content: '';
-        height: 5px;
-        width: 1.5em;
-        background-image: $gradientColor;
         bottom: 0;
-        left: .85em
+        left: 0;
+        width: 100%;
+        overflow: hidden;
+        line-height: 0;
+        z-index: -1;
     }
-}
-
-h2{
-    font-family: 'Oswald', sans-serif;
-    font-weight: 500;
-    margin-bottom: .5em;
-    font-size: 2rem;
-    position: relative;
-    &::before{
-        position: absolute;
-        content: '';
-        height: 3px;
-        width: 1.5em;
-        background-image: $gradientColor;
-        bottom: 0;
+    .custom-shape-divider-bottom-1651637066 svg {
+        position: relative;
+        display: block;
+        width: calc(115% + 1.3px);
+        height: 90px;
+        transform: rotateY(180deg);
     }
-}
-
-h4{
-    font-size: 1.3rem;
-}
-
-h5{
-    font-size: 1.1rem;
-}
-
-h3, h4, h5{
-    font-family: 'Oswald', sans-serif;
-}
-
-
-header{
-    nav{
-        text-align: right;
-        padding: #{"min(6vw, 2em)"} 6vw;
+    .custom-shape-divider-bottom-1651637066 .shape-fill {
+        fill: #FAFAFA;
+    }
+    .wrapper{
+        padding: 4.5em 6vw 0;
+    }
+    h1{
+        font-family: 'Oswald', sans-serif;
+        font-weight: 700;
+        line-height: 120%;
+        font-size: #{"min(calc(4rem + 3vw), 8rem)"};
+        clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0 100%);
+        position: relative;
+        &::before{
+            position: absolute;
+            content: '';
+            height: 5px;
+            width: 1.235em;
+            background-image: $gradientColor;
+            bottom: 0;
+            left: 6px;
+        }
     }
 
     ul{
-        display: none;
+        margin-top: 1em;
+        margin-left: 3px;
+        display: flex;
+        // gap: 2.5em;
         a{
             opacity: 0;
+            margin-right: 2em;
         }
         a:hover{
             font-style: italic;
             position: relative;
             &::before{
-                content: '::';
+                content: '.::';
                 color: #1CA7EC;
             }
         }
     }
+}
 
-    ul.mobile{
-        display: grid;
-        gap: 1.5em;
-        margin-bottom: 1.5em;
+.projects{
+    background-color: #FAFAFA;
+    .wrapper{
+        // gap: 2em;
+        padding: 4em 6vw;
     }
-    
-    .mobile-menu-btn{
-        margin-top: #{"min(6vw, 2em)"};
-        border: none;
-        background: none;
-        animation: floatingIcon 1s infinite alternate ease-in-out;
-        
-        svg{
-            transform: rotate(90deg);
-            pointer-events: none;
-            transition: ease-in-out .3s all;
-            
-        }
-        @keyframes floatingIcon{
-            0%{
-                transform: translateY(-10px);
-            }
-            100%{
-                transform: translateY(0px);
-            }
-        }
-        svg.clicked{
-            transform: rotate(270deg);
-        }
-    }
-}
-
-
-section{
-    padding: 2em 6vw;
-    display: grid;
-    gap: 6vw;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-}
-
-@media (max-width: 425px){
-    section{
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    }
-}
-
-.projects-container{
-    background-color: rgb(247, 247, 247);
-}
-
-section.projects{
-    justify-content: center;
     article{
+        display: grid;
+        height: fit-content;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         background-color: white;
         border-radius: 5px;
         transform: translateY(2em);
         opacity: 0;
-        box-shadow: rgb(209, 209, 209) 1px 1px 8px;
+        box-shadow: rgba(0, 0, 0, .1) 1px 1px 8px;
+        margin-bottom: 2.5em;
+        &:last-child{
+            margin-bottom: 0;
+        }
     }
-
     img{
-        border-bottom: 1px solid $darkGreyColor;
-        border-radius: 5px 5px 0 0;
         width: 100%;
         max-height: 300px;
         object-fit: cover;
         object-position: top;
         image-rendering: auto;
     }
-
     .description{
         padding: 1em;
-        text-align: justify;
         display: grid;
-        gap: 2em;
-        h3{
-            font-size: 1.5em;
+        // gap: 1em;
+        place-content: start;
+        header,p{
+            margin-bottom: 1.125em;
         }
     }
-
+    h3{
+        font-family: 'Oswald', sans-serif;
+        font-size: 1.875rem;
+    }
+    .tech-used{
+        margin-top: .5em;
+        display: flex;
+        // gap: .5em;
+        flex-wrap: wrap;
+        li{
+            font-size: 12px;
+            border-radius: 5px;
+            border: none;
+            padding: .2em .6em;
+            background-color: grey;
+            color: whitesmoke;
+            margin-right: .5em;
+        }
+    }
     .buttons-container{
         width: 100%;
-        display: grid;
-        gap: 1em;
+        display: flex;
+        // gap: 1em;
         flex-wrap: wrap;
     }
-
     button{
-        padding: .8em 1.5em;
+        padding: .3em 1em;
         background-color: $darkGreyColor;
         border: none;
         border-radius: 5px;
+        margin-right: 1em;
         a{
+            font-size: .875rem;
             display: block;
             color: white;
             width: 100%;
         }
-    }
-    // .user-capability ul{
-    //     list-style-type: disc;
-    //     margin-left: 1.5em;
-    // }
-    .tech-used ul{
-        margin-top: .5em;
-        display: flex;
-        gap: .5em;
-        flex-wrap: wrap;
-        li{
-            font-size: 14px;
-            border-radius: 24px;
-            border: 1px solid $darkGreyColor;
-            padding: .3em .7em;
+        &:nth-child(2){
+            background: none;
+            border: 2px solid $darkGreyColor;
+            a{
+                color: $darkGreyColor;
+            }
         }
     }
 }
 
-section.about-contact{
-    gap: 3em;
-    .about-me .about-info{
+.about-contact {
+    background-color: $darkGreyColor;
+    color: white;
+    .wrapper{
+        grid-template-columns: repeat(auto-fit, minmax(338px, 1fr));
+        // gap: 4em;
+        padding: 6vw 6vw #{"calc(6vw - 62px)"};
+    }
+    .about-me{
         margin-bottom: 3em;
-        text-align: justify;
+        .about-info{
+            margin-bottom: 3em;
+        }
+    }
+    h2{
+        font-family: 'Oswald', sans-serif;
+        font-weight: 500;
+        margin-bottom: .5em;
+        font-size: 2rem;
+        position: relative;
+        &::before{
+            position: absolute;
+            content: '';
+            height: 3px;
+            width: 1.5em;
+            background-image: $gradientColor;
+            bottom: 0;
+        }
+    }
+    .what-i-know {
+        ul{
+            display: flex;
+            flex-wrap: wrap;
+            align-items: flex-end;
+            gap: 1em;
+            text-align: center;
+            li{
+                margin-right: .5em;
+                img{
+                    width: 3em;
+                }
+                p{
+                    font-size: .875rem;
+                }
+            }
+        }
     }
 
     form{
         display: grid;
-        gap: .5em;
+        // gap: .5em;
         input, textarea{
             border: none;
             padding: .5em;
-            font-size: 1rem;
+            margin-bottom: .5em;
+            font-size: .875rem;
             color: $darkGreyColor;
         }
 
@@ -234,85 +239,55 @@ section.about-contact{
             cursor: pointer;
         }
 
-        // .error{
-        //     background-color: rgb(238, 153, 153);
-        //     &::placeholder{
-        //         color: white;
-        //     }
-        // }
         .error-email, .error-subj, .error-msg{
             display: none;
             font-size: 15px;
-            color: rgb(255, 225, 106);
+            color: rgb(255, 184, 152);
             font-style: italic;
         }
     }
 }
-.about-contact-container{
-    background-color: $darkGreyColor;
-    color: white;
-}
 
-.what-i-know ul{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-end;
-    gap: 1em;
-    text-align: center;
-    li{
-        width: 4em;
-        img{
-            width: 100%;
-        }
-    }
-}
 footer{
-    padding: 1em 6vw 1.5em;
-}
-
-.footer-container{
     background-color:$darkGreyColor;
     color: white;
+    .wrapper{
+        padding: 1em 6vw 1.5em;
+        display: flex;
+        justify-content: end;
+    }
 }
 
 
-@media (min-width:1024px){
 
-    section{
-        padding: 6vw 6vw;
-    }
-
-    section.about-contact{
-        gap: 6vw;
-    }
-
-    section, header nav, footer{
-        padding-left: 9vw;
-        padding-right: 9vw;
-    }
-
-    nav, .hero, section, footer{
-        max-width: 125em;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-
-    nav{
-        .mobile-menu-btn{
-            display: none;
-        }
-        ul{
-            display: flex;
-            justify-content: end;
-            gap: 2.5em;
-        }
-            
-    }
-
-    h1{
-        font-size: 5.5rem;
-        margin-left: 9vw;
-    }
+@media (min-width: 425px){
     
+    .projects .wrapper article{
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    }
+}
+
+@media (min-width: 769px){
+    
+    .projects .wrapper article{
+        grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+    }
+    .about-contact{
+        .about-me{
+            margin-right: 2em;
+        }
+        .contact-form{
+            margin-left: 2em;
+        }
+    }
+}
+
+@media (min-width: 1024px){
+    .hero{
+        padding-top: 2vw;
+    }
+    .projects, .hero, footer, .about-contact{
+        padding-left: 2vw;
+        padding-right: 2vw;
+    }
 }
