--- a/style/main.css
+++ b/style/main.css
@@ -25,11 +25,11 @@ a {
   margin: auto;
 }
 
-.hero {
+.main-header {
   position: relative;
 }
 
-.hero .custom-shape-divider-bottom-1651637066 {
+.main-header .custom-shape-divider-bottom-1651637066 {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -39,7 +39,7 @@ a {
   z-index: -1;
 }
 
-.hero .custom-shape-divider-bottom-1651637066 svg {
+.main-header .custom-shape-divider-bottom-1651637066 svg {
   position: relative;
   display: block;
   width: calc(115% + 1.3px);
@@ -48,25 +48,25 @@ a {
           transform: rotateY(180deg);
 }
 
-.hero .custom-shape-divider-bottom-1651637066 .shape-fill {
+.main-header .custom-shape-divider-bottom-1651637066 .shape-fill {
   fill: #FAFAFA;
 }
 
-.hero .wrapper {
+.main-header .wrapper {
   padding: 4.5em 6vw 0;
 }
 
-.hero h1 {
+.main-header h1 {
   font-family: 'Oswald', sans-serif;
   font-weight: 700;
   line-height: 120%;
-  font-size: min(calc(4rem + 3vw), 8rem);
+  font-size: min(calc(4rem + 3vw), 5rem);
   -webkit-clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0 100%);
           clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0 100%);
   position: relative;
 }
 
-.hero h1::before {
+.main-header h1::before {
   position: absolute;
   content: '';
   height: 5px;
@@ -77,7 +77,7 @@ a {
   left: 6px;
 }
 
-.hero ul {
+.main-header ul {
   margin-top: 1em;
   margin-left: 3px;
   display: -webkit-box;
@@ -85,17 +85,17 @@ a {
   display: flex;
 }
 
-.hero ul a {
+.main-header ul a {
   opacity: 0;
   margin-right: 2em;
 }
 
-.hero ul a:hover {
+.main-header ul a:hover {
   font-style: italic;
   position: relative;
 }
 
-.hero ul a:hover::before {
+.main-header ul a:hover::before {
   content: '.::';
   color: #1CA7EC;
 }
@@ -273,15 +273,20 @@ a {
   display: grid;
 }
 
+.about-contact form label {
+  margin-top: .5em;
+}
+
 .about-contact form input, .about-contact form textarea {
   border: none;
   padding: .5em;
-  margin-bottom: .5em;
   font-size: .875rem;
   color: #1f1f1f;
+  border-radius: 2px;
 }
 
 .about-contact form .submit-email {
+  margin-top: 2em;
   background-image: -webkit-gradient(linear, left top, right bottom, from(#38c9c9), to(#1CA7EC));
   background-image: linear-gradient(to bottom right, #38c9c9, #1CA7EC);
   color: white;
@@ -299,6 +304,7 @@ a {
 footer {
   background-color: #1f1f1f;
   color: white;
+  font-size: .875rem;
 }
 
 footer .wrapper {
@@ -339,10 +345,10 @@ footer .wrapper {
 }
 
 @media (min-width: 1024px) {
-  .hero {
+  .main-header {
     padding-top: 2vw;
   }
-  .projects, .hero, footer, .about-contact {
+  .projects, .main-header, footer, .about-contact {
     padding-left: 2vw;
     padding-right: 2vw;
   }
