Added style to jquery logo

--- a/style/main.scss
+++ b/style/main.scss
@@ -216,6 +216,11 @@ a{
                     font-size: .875rem;
                 }
             }
+            .jquery-logo{
+                background-color: rgb(211, 211, 211);
+                width: 8em;
+                padding: .2em;
+            }
         }
     }
 
