--- a/style/main.css
+++ b/style/main.css
@@ -268,6 +268,12 @@ a {
   font-size: .875rem;
 }
 
+.about-contact .what-i-know ul .jquery-logo {
+  background-color: lightgray;
+  width: 8em;
+  padding: .2em;
+}
+
 .about-contact form {
   display: -ms-grid;
   display: grid;
