--- a/style/scss/_base.scss
+++ b/style/scss/_base.scss
@@ -23,8 +23,8 @@ ul{
 }
 
 .custom-wrapper{
-    max-width: 75em;
-    margin: auto;
+    max-width: 85em;
+    margin: 0 auto;
     padding: 2.5em 6vw;
 }
 
@@ -32,7 +32,7 @@ h2{
     font-family: 'Oswald', sans-serif;
     font-weight: 500;
     margin-bottom: .5em;
-    font-size: 2rem;
+    font-size: 2.5rem;
     position: relative;
     &::before{
         position: absolute;
@@ -46,6 +46,6 @@ h2{
 
 @media (min-width: 1024px){
     .custom-wrapper{
-        padding: 3.5em 6vw;
+        padding: 4.5em 6vw;
     }
 }
