--- a/style/scss/_about.scss
+++ b/style/scss/_about.scss
@@ -8,6 +8,7 @@
         .about-info{
             max-width: 70ch;
             text-align: left;
+            margin-bottom: 3em;
             p{
                 margin-bottom: 1em;
             }
