--- a/style/scss/_header.scss
+++ b/style/scss/_header.scss
@@ -7,7 +7,7 @@
     color: rgb(255, 255, 255);
     .custom-shape-divider-bottom-1651637066 {
         position: absolute;
-        bottom: 0;
+        bottom: -5px;
         left: 0;
         width: 100%;
         overflow: hidden;
