--- a/style/scss/_projects.scss
+++ b/style/scss/_projects.scss
@@ -60,9 +60,8 @@
 @media (min-width: 860px){
 
     .projects{
-
         article{
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: 50%;
             grid-template-areas: "desc img";
             background-color: transparent;
             box-shadow: none;
